--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -51,6 +51,9 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(imuFilter)
   add_subdirectory(embObjPOS)
   add_subdirectory(embObjBattery)
+  add_subdirectory(rawValuesPublisherClient)
+  add_subdirectory(rawValuesPublisherServer)
+  add_subdirectory(fakeRawValuesPublisher)
 if (ICUB_ICUBINTERFACE_EXPERIMENTAL)
   add_subdirectory(imu3DM_GX3)
 endif()
